# IDcheck

./: .gitignore  README.md  pipeline.py  pyproject.toml  requirements.txt
DOMRP_DARK_HIERARCHY_ENGINE/: README.md
DOMRP_DARK_HIERARCHY_ENGINE/agents/: naratveWizard_v2.system.md
DOMRP_DARK_HIERARCHY_ENGINE/dialogue/: humiliation_lexicon.md
DOMRP_DARK_HIERARCHY_ENGINE/lore/: vespera_magna_dark_revision.md
DOMRP_DARK_HIERARCHY_ENGINE/runtime/: scene_state_schema.json
DOMRP_DARK_HIERARCHY_ENGINE/safety/: boundary_contract.md
DOMRP_DARK_HIERARCHY_ENGINE/systems/: social_hierarchy_engine.md
landmark-provider/: SKILL.md
landmark-provider/scripts/: landmark_provider.py
skill-ai/: SKILL.md
skill-assist/: SKILL.md
truelock/scripts/: truelock.py
utils/: tflite_utils.py
vision-analyzer-v6/scripts/: calibration.py  measurement_consistency.py  vision_analyzer_v6.py
