[project]
name = "body-measurement-pipeline"
version = "2.2.0"
description = "Standalone pipeline for 3D body landmark extraction, visual analysis, and body proportion measurement from any image. Supports front and side profiles."
authors = [
    { name = "Gabarit" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["3D Body Analysis", "MediaPipe", "Landmarks", "Body Proportions", "Computer Vision"]

dependencies = [
    "mediapipe>=0.10.35",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["landmark-provider*", "vision-analyzer-v6*", "truelock*"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true